# pysrim-executor

./: README.md  pyproject.toml
srim/executor/: __init__.py  docker.py  executor.py  native.py  types.py
