[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black<21.0,>=20.8b1",
]

[tool.hatch.build]
include = [
  "srim"
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "pysrim>=0.5.10",
]
name = "pysrim-executor"
version = "0.1.0"
description = "Abstracted executor for PySRIM"
readme = "README.md"

[project.urls]
repository = "https://github.com/agoose77/pysrim-executor"
